--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 :root {
-  --brand-primary: #7A735B;
-  --brand-secondary: #9A9283;
-  --brand-background: #E8E6E3;
+  --brand-primary: #7a735b;
+  --brand-secondary: #9a9283;
+  --brand-background: #e8e6e3;
 }
 
 body {
@@ -15,6 +15,12 @@ body {
 
 .logo-text {
   letter-spacing: 2px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   text-transform: uppercase;
+}
+
+.logo {
+  width: 70%;
+  max-width: 500px;
+  height: auto;
 }
